# network_traffic_env

./: .README.md.swp  .gitignore  .validate.sh.swp  Dockerfile  README.md  app.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  validate.sh
data/: base_loader.py  cicids_loader.py  kdd_loader.py  loader.py
server/: Dockerfile  app.py  environment.py
tasks/: task1_obvious.py  task2_subtle.py  task3_mixed.py  tasks_mixed.py  tasks_obvious.py  tasks_subtle.py
