[project]
name = "network-traffic-env"
version = "1.0.0"
description = "RL environment for adaptive network intrusion detection using KDD Cup 99 dataset"
requires-python = ">=3.10"

[project.dependencies]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "fastapi",
    "pydantic",
    "requests",
    "uvicorn",
    "openai",
]