[project]
name = "network_traffic_env"
version = "0.1.0"
description = "Network Traffic Security Environment"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
    "requests",
    "pandas",
    "numpy",
    "scikit-learn",
    "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"